@@ -62,6 +62,8 @@ const char FAR_VIRTUALKEYS[]   = "far.virtualkeys";
 const char FAR_FLAGSTABLE[]    = "far.Flags";
 const char FAR_DN_STORAGE[]    = "FAR_DN_STORAGE";
 
+static int InsideFarManager = 1;
+
 const char* VirtualKeyStrings[256] =
 {
 	// 0x00
@@ -145,10 +147,6 @@ const char* VirtualKeyStrings[256] =
 	"EXSEL", "EREOF", "PLAY", "ZOOM",
 	"NONAME", "PA1", "OEM_CLEAR", NULL,
 };
-
-const char FAKE_PLUGIN_DATA_KEY[] = "FakePluginData";
-static TPluginData* GetRealPluginData(lua_State* L); /* forward declaration */
-TPluginData* (*GetPluginData)(lua_State* L) = GetRealPluginData;
 
 static lua_CFunction luaopen_bit = NULL;
 static lua_CFunction luaopen_ffi = NULL;
@@ -384,19 +382,19 @@ void PutFlagsToArray(lua_State *L, int index, UINT64 flags)
 	lua_rawseti(L, -2, index);
 }
 
-static TPluginData* GetRealPluginData(lua_State* L)
+TPluginData* GetPluginData(lua_State* L)
 {
+	static TPluginData FakePluginData;
 	TPluginData *pd;
-	(void) lua_getallocf(L, (void**)&pd);
-	return pd;
-}
 
-static TPluginData* GetFakePluginData(lua_State* L)
-{
-	TPluginData *pd;
-	lua_getfield(L, LUA_REGISTRYINDEX, FAKE_PLUGIN_DATA_KEY);
-	pd = (TPluginData*)lua_touserdata(L,-1);
-	lua_pop(L, 1);
+	if (InsideFarManager)
+		(void) lua_getallocf(L, (void**)&pd);
+	else
+	{
+		// There is no Far Manager here and no plugin data but some functions
+		// need TPluginData::Flags to handle file time resolution.
+		pd = &FakePluginData;
+	}
 	return pd;
 }
 
@@ -6925,7 +6923,7 @@ void LF_GetLuafarAPI (LuafarAPI* target)
 // It is called by means of: require("luafar3")
 __declspec(dllexport) int luaopen_luafar3 (lua_State *L)
 {
-	int InsideFarManager = 0;
+	InsideFarManager = 0;
 
 	lua_getglobal(L, "far");
 	if (lua_istable(L, -1))
@@ -6937,19 +6935,7 @@ __declspec(dllexport) int luaopen_luafar3 (lua_State *L)
 	lua_pop(L, 1);
 
 	if (! InsideFarManager)
-	{
-		/* There is no Far Manager here and no plugin data but some functions need TPluginData::Flags
-		*  to handle file time resolution. So let's create "fake" plugin data and place it in Lua state
-		*  registry.
-		*/
-		TPluginData *pd = (TPluginData*)lua_newuserdata(L, sizeof(TPluginData));
-		lua_setfield(L, LUA_REGISTRYINDEX, FAKE_PLUGIN_DATA_KEY);
-		memset(pd, 0, sizeof(TPluginData));
-		pd->Flags = 0;
-		pd->MainLuaState = L;
-		GetPluginData = GetFakePluginData;
-
 		LoadExtraLibraries(L);
-	}
+
 	return 0;
 }
