@@ -1,3 +1,7 @@
+shmuel 2024-04-08 00:04:02+03:00 - build 820
+
+1. LuaFAR: refactoring.
+
 shmuel 2024-04-04 18:26:41+03:00 - build 819
 
 1. LuaFAR: fix DM_SETDLGDATA.
